--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -50,7 +50,10 @@ layout: default
       </ul>
     </section> <!-- End Section Contact -->
     <div class="copyright">
-      <p>&copy; 2018 - Denismes | propulsé par <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> | Thème créé par <a href="https://github.com/artemsheludko/flexible-jekyll" target="_blank">artemsheludko</a></p>
+      <p><strong>&copy; 2018 - Denismes </strong>
+        <br> propulsé par <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> 
+        <br> Thème créé par <a href="https://github.com/artemsheludko/flexible-jekyll" target="_blank">artemsheludko</a>
+      </p>
     </div>
   </footer> <!-- End Footer -->
 </aside> <!-- End Sidebar -->
