--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -13,7 +13,7 @@ html {
 body {
   font-family: 'Lato', sans-serif;
   color: $body-color;
-  background-color: #fbfbfb;
+  background-color: #ccc; /* #fbfbfb; */
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
